@@ -67,16 +67,16 @@ extensions to popular open source scripting languages and web browsers.</p>
   <li>Dynamic invocation support (based on XML schema and WSDL
     implementations)</li>
   <li>Guththila pull parser support</li>
-  <li>WSDL2C code generation tool- with schema code generation (experimental)
-    - <strong>New</strong></li>
-  <li>TCP Monitor - C implementation (experimental) -
-  <strong>New</strong></li>
+  <li>WSDL2C code generation tool- with schema code generation (experimental)</li>
+  <li>TCP Monitor - C implementation (experimental)</li>
+  <li>Axis2/C Manual - <strong>New</strong></li>
 </ol>
 
 <h4>Major Changes Since Last Release</h4>
 <ol>
   <li>Major Memory leak fixes</li>
   <li>Many Bug Fixes</li>
+  <li>Improved Documentation </li>
 </ol>
 
 <h4>TODOs Remaining for 1.0</h4>
