@@ -1,7 +1,7 @@
 Axis2-C (0.95)
   * Major Memory leak fixes
   * Many Bug Fixes
-  * Documentation improvements
+  * Improved Documentation
 -- Axis2-C team <axis-c-dev@ws.apache.org> Thu, 26 October  2006 
 
 Axis2-C (0.94)
